--- a/four-tier-architecture/build.gradle
+++ b/four-tier-architecture/build.gradle
@@ -18,10 +18,44 @@ repositories {
 }
 
 dependencies {
+    //================================================================
+    // SPRING BOOT - 스프링 부트 핵심 스타터
+    //================================================================
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    //================================================================
+    // DEVELOPER TOOLS - 개발자 도구
+    //================================================================
+    // Lombok
+    implementation 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
+    //================================================================
+    // UTILS & LIBRARIES - 공용 라이브러리 및 유틸리티
+    //================================================================
+    // Apache Commons
+    implementation 'org.apache.commons:commons-lang3:3.17.0'
+    implementation 'org.apache.commons:commons-text:1.13.1'
+    implementation 'org.apache.commons:commons-collections4:4.5.0'
+
+    // XSS protection
+    implementation 'org.owasp.encoder:encoder:1.2.3'
+    implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20220608.1'
+    implementation 'org.jsoup:jsoup:1.17.2'
+
+    //================================================================
+    // Database
+    //================================================================
     implementation 'com.h2database:h2'
+
+    //================================================================
+    // TESTING - 테스트
+    //================================================================
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
