--- a/three-tier-architecture/src/main/resources/application.yml
+++ b/three-tier-architecture/src/main/resources/application.yml
@@ -15,6 +15,20 @@ spring:
     init:
       mode: always
       schema-locations: classpath:schema.sql
+  # MyBatis Configuration
+  mybatis:
+    mapper-locations: classpath:mappers/**/*.xml
+    type-aliases-package: com.example.threetier.entity
+    configuration:
+      map-underscore-to-camel-case: true
+  # Thymeleaf Configuration
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+    mode: HTML
+    encoding: UTF-8
+    cache: false
+    enable-spring-el-compiler: true
 
 
 server:
